# memqdrant

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
deploy/: env.example  install.sh  memqdrant.service  palazzo.service
docs/: confluence-quickstart-fr.md
inbox/: longmemeval-bench-2026-04-27.md  mcp-gain-integration-SHIPPED-v0.6.0.md  palace_supersede-array-deserialize-RESOLVED-2026-04-27.md  palace_supersede-array-deserialize-regression.md  palace_supersede-feature-request.md  quantization-NomicEmbedTextV15Q-SHIPPED-v0.5.1.md
scripts/: ab_benchmark.py  ab_eyeball.py  nxpvm_migrate_v0.8.0.sh  replay_to_fastembed.py  smoke.py
src/: baselines.rs  embed.rs  main.rs  mcp.rs  qdrant.rs  schema.rs  util.rs  wal.rs
src/embed/: fastembed_backend.rs  ollama.rs
