[package]
name = "memqdrant"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots", "http2"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
