[package]
name = "memqdrant"
version = "0.2.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.5", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal", "sync", "net"] }
tokio-util = "0.7"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots", "http2"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
