[package]
name = "palazzo"
version = "0.7.0"
edition = "2024"
description = "Self-contained Rust MCP memory palace — Qdrant + local fastembed, typed wing/room/hall schema, temporal supersede, token-savings analytics."
repository = "https://github.com/calibrae/palazzo"
license = "MIT"

[features]
default = ["ollama"]
# Embed via Ollama (HTTP to nomic-embed-text on a remote host). Zero native deps,
# requires a reachable Ollama server.
ollama = []
# Embed locally via fastembed (ONNX nomic-embed-text-v1.5). Self-contained, no
# external services. Adds ~350MB RSS and a ~137MB one-time model download on
# first run. Mutually exclusive with `ollama`.
fastembed = ["dep:fastembed"]

[dependencies]
rmcp = { version = "1.5", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal", "sync", "net"] }
tokio-util = "0.7"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots", "http2"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.1"
fastembed = { version = "5", optional = true }
mcp-gain = { git = "https://github.com/calibrae/mcp-gain", tag = "v0.1.0" }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
